# Django_Journal_Dobrynya

./: .env-prod  .env_prod  .fuse_hidden0000218b00000004  .gitignore  .pylintrc  README.md  config.py  db.sqlite3  docker-compose.yaml  locustfile.py  manage.py  pyproject.toml  requirements.in
api/: api_data.py  api_schedules_data.py  get.py  schedules.py  serializers.py
app/app_schedules/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
app/attendance/: apps.py  models.py  views.py
app/mainapp/: admin.py  apps.py  base_mixins.py
app/news/: apps.py  models.py  utils.py  views.py
app/stats/: apps.py  views.py
app/tasks/: apps.py  context_processors.py  forms.py  models.py  views.py
app/telebot/: apps.py  views.py
app/users/: apps.py  forms.py  mixins.py  models.py  serializers.py  tests.py  urls.py  validators_auth.py  views.py
app_schedules/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
app_schedules/migrations/: 0001_initial.py  0002_alter_event_coaches.py  0002_event_cancelled_dates.py  (+9 more)
attendance/: models.py  serializers.py  urls.py  views.py
journal_dobrynya/: asgi.py  env_config.py  settings.py  urls.py  wsgi.py
mainapp/: admin.py  base_mixins.py  mixins.py  models.py  urls.py  views.py
news/: apps.py  models.py  urls.py  views.py
stats/: urls.py  views.py
tasks/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
users/: admin.py  apps.py  base_forms.py  forms.py  mixins.py  models.py  serializers.py  urls.py  validators.py  validators_auth.py  views.py
(+98 files in other folders)
