[tool.poetry]
name = "prod sport club"
version = "0.1.0"
description = ""
authors = ["vellimir <kkazancov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
black = "^24.8.0"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
django-colorfield = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
